readme & installation guide

--- a/set-team-page.html
+++ b/set-team-page.html
@@ -3,7 +3,7 @@
 <head><title>Pimp my Wolt</title></head>
 <body>
   
-  <span>Team Name:</span>
+  <span>Group Name:</span>
   <input id="team"></input>
   
   <script src="set-team-page.js"></script>
