Added a wheel of fortune

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,4 +1,5 @@
-<html>
+<html> <!-- I honestly dont remember what I intended to do with a popup,
+     keeping it for now as I might have an idea in the future-->
     <head>
 
     </head>
